# homelessness_hackathon

./: .gitignore  ADD_LOGO.md  BUGFIX.md  DELIVERABLES_CHECKLIST.md  FINAL_SUMMARY.md  INDEX.md  INSTALLATION.md  MIGRATION_COMPLETE.md  PULL_REQUEST.md  QUICKSTART.md  README.md  REORGANIZATION_SUMMARY.md  RUN_INSTRUCTIONS.txt  STRUCTURE_COMPLETE.md  USAGE_GUIDE.md  VOICE_FEATURE_SUMMARY.md  VOICE_SETUP.md  app.py  app_voice.py  demo_algorithm.py  demo_conversation.py  demo_voice_parsing.py  main.py  pyproject.toml  requirements.txt  test_matching.py  verify_fix.py
data/: household_data.csv  property_data.csv
docs/: README.md
docs/development/: BUGFIX.md  CHANGELOG.md  DOCUMENTATION_UPDATES.md  FILE_STRUCTURE_REVIEW.md  SECURITY_AUDIT.md
docs/features/: CONVERSATIONAL_INTAKE_GUIDE.md  IN_BROWSER_RECORDING.md  VOICE_FEATURE_SUMMARY.md  VOICE_SETUP.md
docs/getting-started/: INSTALLATION.md  QUICKSTART.md
docs/project/: INDEX.md  PROJECT_SUMMARY.md
examples/: __init__.py  demo_conversation.py  demo_voice_parsing.py
scripts/: setup.sh
src/: __init__.py  generate_data.py  matching_engine.py  voice_handler.py
static/css/: govuk_style.css
tests/: __init__.py  test_matching.py
