[project]
name = "homelessness-hackathon"
version = "0.1.0"
description = "Homeless Household to Temporary Accommodation Matching Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0"
]
