[project]
name = "homelessness-hackathon"
version = "1.0.0"
description = "Homeless Household to Temporary Accommodation Matching Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    # Optional dependencies for voice features
    "boto3>=1.28.0",
    "streamlit-audiorecorder>=0.0.5",
    "pydub>=0.25.1"
]

[project.optional-dependencies]
voice = [
    "boto3>=1.28.0",
    "streamlit-audiorecorder>=0.0.5",
    "pydub>=0.25.1"
]
